# emacs

./: emscripten-asmjs.txt  emscripten.txt  meson.build
lib/: config.h  execinfo.c  globbing-header.py  globbing.py  meson.build
src/: dispnew.c  globbing.py  lisp.h  lread.c  meson.build  sysdep.c  term.c  tparam.h
subprojects/: ncurses.wrap
